# ZisaEmulator

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/shaders/: CMakeLists.txt  shader_template.h.in
hw/: compactflash.c  flash.c  main.c  pio.c  zeal.c  zeal_debugger.c  zeal_input.c
hw/debugger/: debugger.c  debugger_ui.c  disassembler_z80.c
hw/debugger/panels/: memory.c  mmu.c  vram.c
hw/zvb/: zvb.c  zvb_dma.c  zvb_spi.c  zvb_tileset.c
include/debugger/: debugger_types.h  debugger_ui.h
include/hw/: compactflash.h  flash.h  zeal.h
include/hw/zvb/: zvb.h  zvb_dma.h  zvb_spi.h
include/ui/: nuklear.h
include/utils/: config.h  helpers.h  log.h  paths.h
tools/: cmake_shader_gen.py
utils/: config.c  paths.c
